# cli-mail-rs

./: Cargo.toml  README.md
src/: account.rs  decoder.rs  inbox.rs  mail.rs  main.rs  mime_decode.rs  receiving.rs  util.rs
